--- a/src/netsettingswidget.ui
+++ b/src/netsettingswidget.ui
@@ -19,6 +19,9 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
+        <property name="margin">
+            <number>0</number>
+        </property>
         <spacer row="3" column="0">
             <property name="name">
                 <cstring>spacer1</cstring>
@@ -75,9 +78,10 @@
         </widget>
     </grid>
 </widget>
+<customwidgets>
+</customwidgets>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
-    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
 </includehints>
 </UI>
